--- a/inst/visu/css/main.css
+++ b/inst/visu/css/main.css
@@ -403,7 +403,9 @@ div.ci-module-wrapper.ci-module-jqgrid .ci-module-content .ui-jqgrid tr.ui-state
 #title {
     font-size: 20px;
     text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
+    color: #ee3d11;
     margin-left: 10px;
+    margin-top: 5px;
     height: 100%;
     float: left;
     overflow: hidden;
