--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -33,6 +33,11 @@ layout: default
         <svg class="svg-icon orange"><use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg><span>Subscribe</span>
       </a>
     </p>
+    <p class="feed-subscribe">
+      <a href="{{ 'feed.xml' | http://feeds.feedburner.com/RBloggers }}">
+        <svg class="svg-icon orange"><use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | http://feeds.feedburner.com/RBloggers }}"></use></svg><span>Subscribe to r-blogger</span>
+      </a>
+    </p>
   {%- endif -%}
 
 </div>
