add r-blogger rss

--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -34,8 +34,8 @@ layout: default
       </a>
     </p>
     <p class="feed-subscribe">
-      <a href="{{ 'feed.xml' | http://feeds.feedburner.com/RBloggers }}">
-        <svg class="svg-icon orange"><use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | http://feeds.feedburner.com/RBloggers }}"></use></svg><span>Subscribe to r-blogger</span>
+      <a href="http://www.R-bloggers.com ">
+        this blog is aggregated by R-bloggers.com
       </a>
     </p>
   {%- endif -%}
